--- a/index.html
+++ b/index.html
@@ -92,31 +92,22 @@
         // AQUÍ YA ESTÁ TU WEBHOOK REAL
         const WEBHOOK_URL = 'https://hook.us2.make.com/7zxqsk1gjtjjz4qux7rzfq5337y0ab4n';
 
-  async function cargarTalleres() {
+ async function cargarTalleres() {
     const select = document.getElementById('taller');
     try {
         const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
-        const talleres = await res.json();
+        const talleres = await res.json(); // Ahora esto será una lista simple de nombres
         
-        console.log("Datos recibidos:", talleres);
         select.innerHTML = '<option value="">Selecciona un taller...</option>';
         
-        talleres.forEach(t => {
-            // Esta línea busca CUALQUIER columna que tenga el nombre del taller o el estatus
-            // No importa si se llama "Nombre_Taller", "Nombre", o "Columna B"
-            const valores = Object.values(t);
-            const nombre = valores.find(v => typeof v === 'string' && v.length > 15) || valores[0];
-            const estatus = valores.find(v => v === 'ACTIVO' || v === 'activo') || 'ACTIVO';
-
-            if(estatus.toUpperCase() === 'ACTIVO') {
-                let opt = document.createElement('option');
-                opt.value = nombre;
-                opt.textContent = nombre;
-                select.appendChild(opt);
-            }
+        talleres.forEach(nombre => {
+            let opt = document.createElement('option');
+            opt.value = nombre;
+            opt.textContent = nombre;
+            select.appendChild(opt);
         });
     } catch (e) {
-        console.error("Error detallado:", e);
+        console.error("Error:", e);
         select.innerHTML = '<option value="">Error al cargar talleres. Recargue.</option>';
     }
 }
