--- a/index.html
+++ b/index.html
@@ -154,25 +154,24 @@
             </div>
 
             <input type="hidden" id="privacidadAceptada" value="false">
-
-            <div class="terms-box">
+<div class="terms-box">
                 <b>REGLAMENTO PARA PARTICIPANTES:</b><br><br>
-                1. Aceptar el reglamento[cite: 10, 11].<br>
-                2. Tomar el taller en las instalaciones indicadas[cite: 11].<br>
-                3. Acudir puntual (llegar 10 min antes)[cite: 12].<br>
-                4. Asistir al total de sesiones del taller[cite: 13].<br>
-                5. Permanecer en cada sesión hasta que finalice[cite: 14].<br>
+                1. Aceptar el reglamento.<br>
+                2. Tomar el taller en las instalaciones indicadas.<br>
+                3. Acudir puntual (llegar 10 min antes).<br>
+                4. Asistir al total de sesiones del taller.<br>
+                5. Permanecer en cada sesión hasta que finalice.<br>
                 6. Suspender el uso del celular durante el taller.<br>
-                7. Participar de manera respetuosa y activa[cite: 15].<br>
-                8. Realizar las tareas e indicaciones de talleristas[cite: 16].<br>
-                9. Llevar mi propio control de asistencias[cite: 17].<br>
+                7. Participar de manera respetuosa y activa.<br>
+                8. Realizar las tareas e indicaciones de talleristas.<br>
+                9. Llevar mi propio control de asistencias.<br>
                 10. Portar libreta y repasar notas.<br>
-                11. Aplicar lo aprendido en la vida diaria[cite: 18].<br>
-                12. Menos de 8 sesiones invalida la Constancia[cite: 19].<br>
-                13. No se admite el acceso de menores de edad[cite: 20].<br>
-                14. No se admite asistencia de personas no inscritas[cite: 21].<br>
-                15. Comportamientos indebidos causan baja inmediata[cite: 22].<br>
-                16. Asumir consecuencias por comportamiento inadecuado[cite: 23].
+                11. Aplicar lo aprendido en la vida diaria.<br>
+                12. Menos de 8 sesiones invalida la obtención de la Constancia.<br>
+                13. No se admite el acceso de niñas, niños o adolescentes al taller.<br>
+                14. No se admite asistencia de personas no inscritas.<br>
+                15. Comportamientos indebidos causan baja inmediata y notificación al juzgado.<br>
+                16. Asumir las consecuencias derivadas de un comportamiento inadecuado.
             </div>
             
             <label class="check-container">
