--- a/admin.html
+++ b/admin.html
@@ -92,27 +92,33 @@
             } catch (e) { alert("Error de conexión"); }
         }
 
-        async function obtenerDatos(rol, sede) {
+   async function obtenerDatos(rol, sede) {
             const tbody = document.getElementById('table-body');
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:40px;">Cargando...</td></tr>';
             try {
-                const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos`);
+                // Si es administrador mandamos sede vacía, si no, la sede del tallerista
+                const paramSede = (rol === 'Administrador') ? '' : sede;
+                const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos&sede=${paramSede}`);
                 const data = await res.json();
                 
-                // Aplicamos la lógica de "Limpieza de Talleres" pero para Filas
-                const registros = data.map(item => {
+                // Forzamos que 'data' sea un array para poder usar .map
+                const rawData = Array.isArray(data) ? data : [data];
+
+                const registros = rawData.map(item => {
                     if (!item) return null;
+                    // Extraemos los valores sin importar el nombre de la columna
                     const v = Object.values(item);
-                    // Mapeamos las posiciones del Excel (ajusta si cambiaste columnas)
+                    
                     return {
-                        folio: v[0],   // Columna A
-                        nombre: v[3] + " " + v[4], // Nombre + Apellido
-                        taller: v[7],  // Columna Taller
-                        canaliza: v[8] // Columna Canaliza
+                        folio: v[0] || 'S/F',       // EFDH-2026-001
+                        nombre: (v[3] || '') + " " + (v[4] || '') + " " + (v[5] || ''), // Nombre + Apellidos
+                        taller: v[7] || 'Sin taller', 
+                        canaliza: v[8] || 'N/A'
                     };
-                }).filter(r => r && r.folio);
+                }).filter(r => r && r.folio !== 'empty'); // Limpiamos nulos o vacíos
 
                 if (registros.length === 0) {
-                    tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">No hay registros.</td></tr>';
+                    tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">No hay registros encontrados.</td></tr>';
                     return;
                 }
 
@@ -120,7 +126,7 @@
                 registros.forEach(r => {
                     tbody.innerHTML += `
                         <tr>
-                            <td><strong>${r.folio}</strong></td>
+                            <td><strong style="color: var(--primary);">${r.folio}</strong></td>
                             <td>${r.nombre}</td>
                             <td>${r.taller}</td>
                             <td>${r.canaliza}</td>
@@ -128,7 +134,8 @@
                     `;
                 });
             } catch (e) { 
-                tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px; color:red;">Error al procesar datos.</td></tr>'; 
+                console.error("Error procesando JSON:", e);
+                tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px; color:red;">Error al procesar los datos recibidos.</td></tr>'; 
             }
         }
     </script>
