--- a/admin.html
+++ b/admin.html
@@ -8,55 +8,46 @@
         :root { --primary: #7b7bb5; --secondary: #4a90e2; --bg: #f0f2f5; --text: #2c3e50; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow-x: hidden; }
 
-        /* Login - Pantalla Bloqueante Total */
-        #login-screen { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: linear-gradient(135deg, var(--primary), var(--secondary)); 
-            display: flex; align-items: center; justify-content: center; z-index: 10000; 
-        }
+        /* Login */
+        #login-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, var(--primary), var(--secondary)); display: flex; align-items: center; justify-content: center; z-index: 10000; }
         .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.2); width: 90%; max-width: 350px; text-align: center; }
 
-        /* Estructura del Panel */
-        #admin-panel { display: none; min-height: 100vh; width: 100%; }
-        .sidebar { 
-            width: 260px; background: white; height: 100vh; padding: 30px 20px; 
-            position: fixed; border-right: 1px solid #e1e8f0; display: flex; 
-            flex-direction: column; box-sizing: border-box; z-index: 100;
-        }
-        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; }
+        /* Panel */
+        #admin-panel { display: none; min-height: 100vh; width: 100%; display: flex; }
+        .sidebar { width: 260px; background: white; height: 100vh; padding: 30px 20px; position: fixed; border-right: 1px solid #e1e8f0; display: flex; flex-direction: column; box-sizing: border-box; z-index: 100; }
+        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; overflow-y: auto; height: 100vh; }
 
         .user-box { padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid #eee; }
-        .user-box h3 { margin: 0; color: var(--primary); font-size: 1.1em; }
-
         .nav-btn { padding: 12px 15px; border-radius: 8px; margin-bottom: 8px; cursor: pointer; transition: 0.3s; font-weight: 500; color: #555; display: flex; align-items: center; gap: 10px; }
-        .nav-btn:hover { background: #f0f2f5; color: var(--primary); }
+        .nav-btn:hover, .nav-btn.active { background: #f0f2f5; color: var(--primary); }
         .nav-btn.active { background: var(--primary); color: white; }
 
-        /* Secciones y Tablas */
+        /* Tablas */
         .content-section { display: none; width: 100%; }
         .content-section.active { display: block; }
-        .table-card { background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); overflow-x: auto; margin-top: 20px; }
-        table { width: 100%; border-collapse: collapse; min-width: 600px; }
+        .table-card { background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); overflow: hidden; margin-top: 20px; }
+        table { width: 100%; border-collapse: collapse; }
         th { background: #fafbfc; color: #8898aa; font-size: 0.75em; text-transform: uppercase; padding: 15px 20px; text-align: left; }
         td { padding: 15px 20px; border-bottom: 1px solid #f0f2f5; font-size: 0.9em; }
 
-        .btn-status { padding: 6px 12px; border-radius: 20px; border: none; font-size: 0.75em; font-weight: bold; cursor: pointer; }
+        .btn-status { padding: 5px 12px; border-radius: 20px; font-size: 0.75em; font-weight: bold; border: none; }
         .status-activo { background: #e6fcf5; color: #0ca678; }
         .status-inactivo { background: #fff5f5; color: #fa5252; }
+        .btn-toggle { background: #f0f2f5; border: 1px solid #ddd; cursor: pointer; padding: 5px 10px; border-radius: 5px; }
         
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; margin-top: 10px; }
+        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
     <div id="login-screen">
         <div class="login-card">
-            <h2 style="color: var(--primary); margin-top:0;">Acceso Seguro</h2>
+            <h2 style="color: var(--primary);">Panel Administrativo</h2>
             <input type="email" id="email" placeholder="Correo electrónico">
             <input type="password" id="pass" placeholder="Contraseña">
-            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR AL PANEL</button>
-            <p id="error-msg" style="color:red; display:none; font-size:0.8em; margin-top:15px;">Credenciales incorrectas.</p>
+            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR</button>
+            <p id="error-msg" style="color:red; display:none; font-size:0.8em; margin-top:10px;">Acceso denegado</p>
         </div>
     </div>
 
@@ -67,33 +58,26 @@
                 <span id="role-display" style="font-size:0.8em; color:gray;">Rol</span>
             </div>
             <div id="tab-inscritos" class="nav-btn active" onclick="cambiarSeccion('inscritos')">📊 Inscritos Totales</div>
-            <div id="tab-catalogos" class="nav-btn" onclick="cambiarSeccion('catalogos')">🏫 Sedes y Talleres</div>
-            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Cerrar Sesión</div>
+            <div id="tab-catalogos" class="nav-btn" onclick="cambiarSeccion('catalogos')">🏫 Gestión de Talleres</div>
+            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Salir</div>
         </div>
 
         <div class="main-content">
             <div id="sec-inscritos" class="content-section active">
-                <h1>Inscripciones Escuela FDH</h1>
+                <h1>Inscripciones Recientes</h1>
                 <div class="table-card">
                     <table>
-                        <thead>
-                            <tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Canalización</th></tr>
-                        </thead>
-                        <tbody id="body-inscritos">
-                            <tr><td colspan="4" style="text-align:center; padding:40px;">Cargando...</td></tr>
-                        </tbody>
+                        <thead><tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Canalización</th></tr></thead>
+                        <tbody id="body-inscritos"></tbody>
                     </table>
                 </div>
             </div>
 
             <div id="sec-catalogos" class="content-section">
-                <h1>Gestión de Catálogos</h1>
-                <p>Activa o desactiva talleres y sedes para el formulario público.</p>
+                <h1>Configuración de Talleres</h1>
                 <div class="table-card">
                     <table>
-                        <thead>
-                            <tr><th>Nombre</th><th>Estatus Actual</th><th>Acción</th></tr>
-                        </thead>
+                        <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus</th><th>Acción</th></tr></thead>
                         <tbody id="body-catalogos"></tbody>
                     </table>
                 </div>
@@ -120,9 +104,7 @@
                     document.getElementById('user-display').innerText = user.nombre;
                     document.getElementById('role-display').innerText = user.rol;
                     obtenerDatosInscritos(user.rol, user.sede);
-                } else {
-                    document.getElementById('error-msg').style.display = 'block';
-                }
+                } else { document.getElementById('error-msg').style.display = 'block'; }
             } catch (e) { alert("Error de conexión"); }
         }
 
@@ -136,50 +118,52 @@
 
         async function obtenerDatosInscritos(rol, sede) {
             const tbody = document.getElementById('body-inscritos');
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos&sede=${rol === 'Administrador' ? '' : sede}`);
                 const data = await res.json();
-                const rawData = Array.isArray(data) ? data : [data];
                 tbody.innerHTML = '';
-                rawData.forEach(item => {
+                (Array.isArray(data) ? data : [data]).forEach(item => {
                     const v = Object.values(item);
                     if(v[0] && v[0] !== 'empty') {
-                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${(v[3]||'')+' '+(v[4]||'')}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
+                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${v[3]} ${v[4]}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
                     }
                 });
-            } catch (e) { tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; color:red;">Error al cargar inscritos.</td></tr>'; }
+            } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar datos.</td></tr>'; }
         }
 
         async function obtenerDatosCatalogos() {
             const tbody = document.getElementById('body-catalogos');
-            tbody.innerHTML = '<tr><td colspan="3" style="text-align:center; padding:40px;">Cargando catálogo...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando catálogo...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 data.forEach((item, index) => {
                     const v = Object.values(item);
-                    const nombre = v.find(val => typeof val === 'string' && val.length > 5) || "Sin nombre";
-                    const estatus = v.includes("Activo") || v.includes("activo") ? "Activo" : "Inactivo";
+                    const id = v[0];
+                    const nombre = v[1];
+                    const estatus = String(v[2] || '').toUpperCase() === 'ACTIVO' ? 'ACTIVO' : 'INACTIVO';
+                    
                     tbody.innerHTML += `
                         <tr>
+                            <td>${id}</td>
                             <td>${nombre}</td>
-                            <td><span class="btn-status ${estatus==='Activo'?'status-activo':'status-inactivo'}">${estatus}</span></td>
-                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" class="btn-status" style="background:#eee; color:#333;">Alternar</button></td>
+                            <td><span class="btn-status ${estatus === 'ACTIVO' ? 'status-activo' : 'status-inactivo'}">${estatus}</span></td>
+                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" class="btn-toggle">Alternar</button></td>
                         </tr>`;
                 });
-            } catch (e) { tbody.innerHTML = '<tr><td colspan="3" style="text-align:center;">Error al cargar catálogo.</td></tr>'; }
+            } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar catálogo.</td></tr>'; }
         }
 
         async function actualizarEstatus(fila, estatusActual) {
-            const nuevoEstatus = estatusActual === 'Activo' ? 'Inactivo' : 'Activo';
+            const nuevo = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
             try {
                 await fetch(WEBHOOK_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevoEstatus })
+                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevo })
                 });
-                alert("Estatus actualizado en Excel");
                 obtenerDatosCatalogos();
             } catch (e) { alert("Error al actualizar"); }
         }
