--- a/admin.html
+++ b/admin.html
@@ -8,22 +8,32 @@
         :root { --primary: #7b7bb5; --secondary: #4a90e2; --bg: #f0f2f5; --text: #2c3e50; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow-x: hidden; }
 
-        /* Login */
-        #login-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, var(--primary), var(--secondary)); display: flex; align-items: center; justify-content: center; z-index: 10000; }
-        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.2); width: 90%; max-width: 350px; text-align: center; }
+        /* Pantalla de Login - Sólida e Independiente */
+        #login-screen { 
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+            background: linear-gradient(135deg, var(--primary), var(--secondary)); 
+            display: flex; align-items: center; justify-content: center; z-index: 10000; 
+        }
+        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.3); width: 90%; max-width: 350px; text-align: center; }
 
-        /* Panel */
-        #admin-panel { display: none; min-height: 100vh; width: 100%; display: flex; }
-        .sidebar { width: 260px; background: white; height: 100vh; padding: 30px 20px; position: fixed; border-right: 1px solid #e1e8f0; display: flex; flex-direction: column; box-sizing: border-box; z-index: 100; }
+        /* Estructura del Panel - Oculto por defecto */
+        #admin-panel { display: none; min-height: 100vh; width: 100%; }
+        .sidebar { 
+            width: 260px; background: white; height: 100vh; padding: 30px 20px; 
+            position: fixed; border-right: 1px solid #e1e8f0; display: flex; 
+            flex-direction: column; box-sizing: border-box; z-index: 100;
+        }
         .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; overflow-y: auto; height: 100vh; }
 
         .user-box { padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid #eee; }
+        .user-box h3 { margin: 0; color: var(--primary); font-size: 1.1em; }
+
         .nav-btn { padding: 12px 15px; border-radius: 8px; margin-bottom: 8px; cursor: pointer; transition: 0.3s; font-weight: 500; color: #555; display: flex; align-items: center; gap: 10px; }
-        .nav-btn:hover, .nav-btn.active { background: #f0f2f5; color: var(--primary); }
+        .nav-btn:hover { background: #f0f2f5; color: var(--primary); }
         .nav-btn.active { background: var(--primary); color: white; }
 
-        /* Tablas */
-        .content-section { display: none; width: 100%; }
+        /* Secciones y Tablas */
+        .content-section { display: none; }
         .content-section.active { display: block; }
         .table-card { background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); overflow: hidden; margin-top: 20px; }
         table { width: 100%; border-collapse: collapse; }
@@ -33,10 +43,10 @@
         .btn-status { padding: 5px 12px; border-radius: 20px; font-size: 0.75em; font-weight: bold; border: none; }
         .status-activo { background: #e6fcf5; color: #0ca678; }
         .status-inactivo { background: #fff5f5; color: #fa5252; }
-        .btn-toggle { background: #f0f2f5; border: 1px solid #ddd; cursor: pointer; padding: 5px 10px; border-radius: 5px; }
+        .btn-toggle { background: #eee; color: #333; border: none; padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.75em; font-weight: bold; }
         
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; }
+        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -46,8 +56,8 @@
             <h2 style="color: var(--primary);">Panel Administrativo</h2>
             <input type="email" id="email" placeholder="Correo electrónico">
             <input type="password" id="pass" placeholder="Contraseña">
-            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR</button>
-            <p id="error-msg" style="color:red; display:none; font-size:0.8em; margin-top:10px;">Acceso denegado</p>
+            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR AL PANEL</button>
+            <p id="error-msg" style="color:red; display:none; font-size:0.8em; margin-top:15px;">Acceso denegado.</p>
         </div>
     </div>
 
@@ -59,7 +69,7 @@
             </div>
             <div id="tab-inscritos" class="nav-btn active" onclick="cambiarSeccion('inscritos')">📊 Inscritos Totales</div>
             <div id="tab-catalogos" class="nav-btn" onclick="cambiarSeccion('catalogos')">🏫 Gestión de Talleres</div>
-            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Salir</div>
+            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Cerrar Sesión</div>
         </div>
 
         <div class="main-content">
@@ -67,7 +77,7 @@
                 <h1>Inscripciones Recientes</h1>
                 <div class="table-card">
                     <table>
-                        <thead><tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Canalización</th></tr></thead>
+                        <thead><tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Sede/Canaliza</th></tr></thead>
                         <tbody id="body-inscritos"></tbody>
                     </table>
                 </div>
@@ -77,7 +87,7 @@
                 <h1>Configuración de Talleres</h1>
                 <div class="table-card">
                     <table>
-                        <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus</th><th>Acción</th></tr></thead>
+                        <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus Actual</th><th>Acción</th></tr></thead>
                         <tbody id="body-catalogos"></tbody>
                     </table>
                 </div>
@@ -103,7 +113,7 @@
                     document.getElementById('admin-panel').style.display = 'flex';
                     document.getElementById('user-display').innerText = user.nombre;
                     document.getElementById('role-display').innerText = user.rol;
-                    obtenerDatosInscritos(user.rol, user.sede);
+                    cargarInscritos();
                 } else { document.getElementById('error-msg').style.display = 'block'; }
             } catch (e) { alert("Error de conexión"); }
         }
@@ -113,37 +123,40 @@
             document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
             document.getElementById('sec-' + sec).classList.add('active');
             document.getElementById('tab-' + sec).classList.add('active');
-            if(sec === 'catalogos') obtenerDatosCatalogos();
+            if(sec === 'catalogos') cargarCatalogos();
         }
 
-        async function obtenerDatosInscritos(rol, sede) {
+        async function cargarInscritos() {
             const tbody = document.getElementById('body-inscritos');
             tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando...</td></tr>';
             try {
-                const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos&sede=${rol === 'Administrador' ? '' : sede}`);
+                const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 (Array.isArray(data) ? data : [data]).forEach(item => {
                     const v = Object.values(item);
                     if(v[0] && v[0] !== 'empty') {
-                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${v[3]} ${v[4]}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
+                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${(v[3]||'')+' '+(v[4]||'')}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
                     }
                 });
             } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar datos.</td></tr>'; }
         }
 
-        async function obtenerDatosCatalogos() {
+        async function cargarCatalogos() {
             const tbody = document.getElementById('body-catalogos');
             tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando catálogo...</td></tr>';
             try {
+                // Usamos la rama de listar talleres que ya tienes
                 const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 data.forEach((item, index) => {
                     const v = Object.values(item);
-                    const id = v[0];
-                    const nombre = v[1];
-                    const estatus = String(v[2] || '').toUpperCase() === 'ACTIVO' ? 'ACTIVO' : 'INACTIVO';
+                    // Mapeo dinámico: v[0] es ID, v[1] es Nombre, v[2] es Estatus
+                    const id = v[0] || '---';
+                    const nombre = v[1] || 'Sin nombre';
+                    const estatusRaw = String(v[2] || '').toUpperCase();
+                    const estatus = estatusRaw === 'ACTIVO' ? 'ACTIVO' : 'INACTIVO';
                     
                     tbody.innerHTML += `
                         <tr>
@@ -157,14 +170,14 @@
         }
 
         async function actualizarEstatus(fila, estatusActual) {
-            const nuevo = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
+            const nuevoEstatus = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
             try {
                 await fetch(WEBHOOK_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevo })
+                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevoEstatus })
                 });
-                obtenerDatosCatalogos();
+                cargarCatalogos();
             } catch (e) { alert("Error al actualizar"); }
         }
     </script>
