--- a/admin.html
+++ b/admin.html
@@ -8,22 +8,22 @@
         :root { --primary: #7b7bb5; --secondary: #4a90e2; --bg: #f0f2f5; --text: #2c3e50; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow-x: hidden; }
 
-        /* Pantalla de Login - Sólida e Independiente */
+        /* Login - Pantalla Bloqueante Sólida */
         #login-screen { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: linear-gradient(135deg, var(--primary), var(--secondary)); 
             display: flex; align-items: center; justify-content: center; z-index: 10000; 
         }
-        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.3); width: 90%; max-width: 350px; text-align: center; }
+        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.2); width: 90%; max-width: 350px; text-align: center; }
 
-        /* Estructura del Panel - Oculto por defecto */
+        /* Estructura del Panel */
         #admin-panel { display: none; min-height: 100vh; width: 100%; }
         .sidebar { 
             width: 260px; background: white; height: 100vh; padding: 30px 20px; 
             position: fixed; border-right: 1px solid #e1e8f0; display: flex; 
             flex-direction: column; box-sizing: border-box; z-index: 100;
         }
-        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; overflow-y: auto; height: 100vh; }
+        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; }
 
         .user-box { padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid #eee; }
         .user-box h3 { margin: 0; color: var(--primary); font-size: 1.1em; }
@@ -40,24 +40,23 @@
         th { background: #fafbfc; color: #8898aa; font-size: 0.75em; text-transform: uppercase; padding: 15px 20px; text-align: left; }
         td { padding: 15px 20px; border-bottom: 1px solid #f0f2f5; font-size: 0.9em; }
 
-        .btn-status { padding: 5px 12px; border-radius: 20px; font-size: 0.75em; font-weight: bold; border: none; }
+        .btn-status { padding: 6px 12px; border-radius: 20px; border: none; font-size: 0.75em; font-weight: bold; }
         .status-activo { background: #e6fcf5; color: #0ca678; }
         .status-inactivo { background: #fff5f5; color: #fa5252; }
-        .btn-toggle { background: #eee; color: #333; border: none; padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.75em; font-weight: bold; }
         
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
-        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; margin-top: 10px; }
+        .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
     <div id="login-screen">
         <div class="login-card">
-            <h2 style="color: var(--primary);">Panel Administrativo</h2>
+            <h2 style="color: var(--primary); margin-top: 0;">Panel Administrativo</h2>
             <input type="email" id="email" placeholder="Correo electrónico">
             <input type="password" id="pass" placeholder="Contraseña">
-            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR AL PANEL</button>
-            <p id="error-msg" style="color:red; display:none; font-size:0.8em; margin-top:15px;">Acceso denegado.</p>
+            <button class="btn-login" onclick="ejecutarLogin()">ENTRAR</button>
+            <p id="error-msg" style="color: #fa5252; font-size: 0.85em; display: none; margin-top: 15px;">Datos incorrectos.</p>
         </div>
     </div>
 
@@ -65,11 +64,11 @@
         <div class="sidebar">
             <div class="user-box">
                 <h3 id="user-display">Usuario</h3>
-                <span id="role-display" style="font-size:0.8em; color:gray;">Rol</span>
+                <span id="role-display" style="font-size: 0.8em; color: gray;">Rol</span>
             </div>
             <div id="tab-inscritos" class="nav-btn active" onclick="cambiarSeccion('inscritos')">📊 Inscritos Totales</div>
             <div id="tab-catalogos" class="nav-btn" onclick="cambiarSeccion('catalogos')">🏫 Gestión de Talleres</div>
-            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Cerrar Sesión</div>
+            <div class="nav-btn" onclick="location.reload()" style="margin-top: auto; color: #fa5252;">🚪 Salir</div>
         </div>
 
         <div class="main-content">
@@ -77,7 +76,7 @@
                 <h1>Inscripciones Recientes</h1>
                 <div class="table-card">
                     <table>
-                        <thead><tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Sede/Canaliza</th></tr></thead>
+                        <thead><tr><th>Folio</th><th>Nombre</th><th>Taller</th><th>Canalización</th></tr></thead>
                         <tbody id="body-inscritos"></tbody>
                     </table>
                 </div>
@@ -87,7 +86,7 @@
                 <h1>Configuración de Talleres</h1>
                 <div class="table-card">
                     <table>
-                        <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus Actual</th><th>Acción</th></tr></thead>
+                        <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus</th><th>Acción</th></tr></thead>
                         <tbody id="body-catalogos"></tbody>
                     </table>
                 </div>
@@ -123,7 +122,7 @@
             document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
             document.getElementById('sec-' + sec).classList.add('active');
             document.getElementById('tab-' + sec).classList.add('active');
-            if(sec === 'catalogos') cargarCatalogos();
+            if(sec === 'catalogos') obtenerDatosCatalogos();
         }
 
         async function cargarInscritos() {
@@ -136,23 +135,22 @@
                 (Array.isArray(data) ? data : [data]).forEach(item => {
                     const v = Object.values(item);
                     if(v[0] && v[0] !== 'empty') {
-                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${(v[3]||'')+' '+(v[4]||'')}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
+                        tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${v[3]} ${v[4]}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
                     }
                 });
             } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar datos.</td></tr>'; }
         }
 
-        async function cargarCatalogos() {
+        async function obtenerDatosCatalogos() {
             const tbody = document.getElementById('body-catalogos');
             tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando catálogo...</td></tr>';
             try {
-                // Usamos la rama de listar talleres que ya tienes
                 const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 data.forEach((item, index) => {
                     const v = Object.values(item);
-                    // Mapeo dinámico: v[0] es ID, v[1] es Nombre, v[2] es Estatus
+                    // Lógica robusta: v[0]=ID, v[1]=Nombre, v[2]=Estatus
                     const id = v[0] || '---';
                     const nombre = v[1] || 'Sin nombre';
                     const estatusRaw = String(v[2] || '').toUpperCase();
@@ -163,21 +161,21 @@
                             <td>${id}</td>
                             <td>${nombre}</td>
                             <td><span class="btn-status ${estatus === 'ACTIVO' ? 'status-activo' : 'status-inactivo'}">${estatus}</span></td>
-                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" class="btn-toggle">Alternar</button></td>
+                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" style="background:#eee; border:1px solid #ccc; cursor:pointer; padding:5px 10px; border-radius:5px;">Alternar</button></td>
                         </tr>`;
                 });
             } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar catálogo.</td></tr>'; }
         }
 
         async function actualizarEstatus(fila, estatusActual) {
-            const nuevoEstatus = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
+            const nuevo = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
             try {
                 await fetch(WEBHOOK_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevoEstatus })
+                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevo })
                 });
-                cargarCatalogos();
+                obtenerDatosCatalogos(); // Refresca la tabla
             } catch (e) { alert("Error al actualizar"); }
         }
     </script>
